--- a/src/main/resources/templates/students/list.html
+++ b/src/main/resources/templates/students/list.html
@@ -29,10 +29,10 @@
         <table class="table table-bordered table-striped table-hover">
             <thead>
             <tr>
-                <th>#</th>
-                <th>First name</th>
-                <th>Last name</th>
-                <th>&nbsp;</th>
+                <th style="width: 10%; text-align: center;">#</th>
+                <th style="width: 30%; text-align: center;">First name</th>
+                <th style="width: 30%; text-align: center;">Last name</th>
+                <th style="width: 30%; text-align: center;">&nbsp;</th>
             </tr>
             </thead>
             <tbody>
@@ -48,6 +48,22 @@
             </tr>
             </tbody>
         </table>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a type="button" class="btn btn-primary" href="#">Add new</a>
+                <div class="d-flex">
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination">
+                            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                            <li class="page-item"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item"><a class="page-link" href="#">2</a></li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </nav>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
