--- a/src/main/resources/templates/students/add.html
+++ b/src/main/resources/templates/students/add.html
@@ -25,8 +25,8 @@
 </nav>
 <br>
 <br>
-<div class="container-sm">
-    <h2 class="navbar-brand">Student Details</h2>
+<div class="container-sm" style="width: 50%">
+    <h2 class="navbar-brand">Add Student</h2>
     <form action="#" method="POST">
         <div class="mb-3">
             <label for="firstName" class="form-label">First name</label>
