--- a/src/main/resources/templates/students/list.html
+++ b/src/main/resources/templates/students/list.html
@@ -41,24 +41,21 @@
                 <td>John</td>
                 <td>Doe</td>
                 <td>
-                    <a type="button" class="btn btn-secondary" href="#">View</a>
-                    <a type="button" class="btn btn-warning" href="#">Edit</a>
-                    <a type="button" class="btn btn-danger" href="#">Delete</a>
+                    <a type="button" class="btn btn-secondary" href="th:href='@{/students/list}'">View</a>
+                    <a type="button" class="btn btn-warning" href="th:href='@{/order/list}'">Edit</a>
+                    <a type="button" class="btn btn-danger" href="th:href='@{/order/list}'">Delete</a>
                 </td>
             </tr>
             </tbody>
         </table>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a type="button" class="btn btn-primary" href="#">Add new</a>
+                <a type="button" class="btn btn-primary" href="/students/add">Add new</a>
                 <div class="d-flex">
                     <nav aria-label="Page navigation example">
                         <ul class="pagination">
-                            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                            <li class="page-item"><a class="page-link" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                            <li class="page-item"><a class="page-link" href="">Previous</a></li>
+                            <li class="page-item"><a class="page-link" href="">Next</a></li>
                         </ul>
                     </nav>
                 </div>
