--- a/src/main/resources/templates/students/list.html
+++ b/src/main/resources/templates/students/list.html
@@ -36,10 +36,10 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
+            <tr th:each="student: ${students}">
                 <td>1</td>
-                <td>John</td>
-                <td>Doe</td>
+                <td th:text="${student.firstName}">John</td>
+                <td th:text="${student.lastName}">Doe</td>
                 <td>
                     <a type="button" class="btn btn-secondary" href="th:href='@{/students/list}'">View</a>
                     <a type="button" class="btn btn-warning" href="th:href='@{/order/list}'">Edit</a>
@@ -54,8 +54,10 @@
                 <div class="d-flex">
                     <nav aria-label="Page navigation example">
                         <ul class="pagination">
-                            <li class="page-item"><a class="page-link" href="">Previous</a></li>
-                            <li class="page-item"><a class="page-link" href="">Next</a></li>
+                            <li class="page-item disabled" th:if="${prevPageNum == -1}"><a class="page-link" href="#">Previous</a></li>
+                            <li class="page-item" th:if="${prevPageNum > -1}"><a class="page-link" th:href="'?page' + ${prevPageNum}">Previous</a></li>
+                            <li class="page-item disabled" th:if="${nextPageNum == -1}"><a class="page-link" href="#">Next</a></li>
+                            <li class="page-item" th:if="${prevPageNum > -1}"><a class="page-link" th:href="'?page' + ${nextPageNum}">Next</a></li>
                         </ul>
                     </nav>
                 </div>
