--- a/src/main/resources/templates/students/add.html
+++ b/src/main/resources/templates/students/add.html
@@ -37,7 +37,7 @@
             <input type="text" class="form-control" id="lastName" placeholder="Doe">
         </div>
         <input type="submit" class="btn btn-success" value="Add">
-        <a type="button" class="btn btn-danger" href="#">Cancel</a>
+        <a type="button" class="btn btn-danger" href="/students/list">Cancel</a>
     </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
