--- a/src/main/resources/templates/students/view.html
+++ b/src/main/resources/templates/students/view.html
@@ -28,20 +28,24 @@
 <div class="container-sm" style="width: 50%">
     <h2 class="navbar-brand">Student Details</h2>
 
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-danger" role="alert" th:if="${student.id == null}">
         Error: student not found!
     </div>
 
     <form action="#" method="POST">
         <div class="mb-3">
             <label for="firstName" class="form-label">First name</label>
-            <input type="text" class="form-control" id="firstName" placeholder="John" disabled="disabled"/>
+            <input type="text" class="form-control" id="firstName"
+                   th:placeholder="${(student.id == null) ? '' : student.firstName}"
+                   disabled="disabled"/>
         </div>
         <div class="mb-3">
             <label for="lastName" class="form-label">Last name</label>
-            <input type="text" class="form-control" id="lastName" placeholder="Doe" disabled="disabled">
+            <input type="text" class="form-control" id="lastName"
+                   th:placeholder="${(student.id == null) ? '' : student.lastName}"
+                   disabled="disabled">
         </div>
-        <input type="submit" class="btn btn-dark" value="Go back">
+        <a href="/students/list" class="btn btn-dark">Go back</a>
     </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
