--- a/src/main/resources/templates/students/edit.html
+++ b/src/main/resources/templates/students/edit.html
@@ -12,6 +12,7 @@
         }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="http://localhost:35729/livereload.js"></script>
 </head>
 
 <body>
@@ -28,21 +29,22 @@
 <div class="container-sm" style="width: 50%">
     <h2 class="navbar-brand">Edit Student</h2>
 
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-danger" role="alert" th:if="${student.id == null}">
         Error: student not found!
     </div>
 
-    <form action="#" method="POST">
+    <form th:action="@{/students/save}" method="POST" th:if="${student.id != null}" th:object="${student}">
+        <input type="hidden" id="id" name="id" th:value="*{id}">
         <div class="mb-3">
             <label for="firstName" class="form-label">First name</label>
-            <input type="text" class="form-control" id="firstName" placeholder="John"/>
+            <input type="text" class="form-control" id="firstName" name="firstName" th:value="*{firstName}"/>
         </div>
         <div class="mb-3">
             <label for="lastName" class="form-label">Last name</label>
-            <input type="text" class="form-control" id="lastName" placeholder="Doe">
+            <input type="text" class="form-control" id="lastName" name="lastName" th:value="*{lastName}">
         </div>
-        <input type="submit" class="btn btn-success" value="Edit">
-        <a type="button" class="btn btn-danger" href="#">Cancel</a>
+        <input type="submit" class="btn btn-success" value="Update">
+        <a type="button" class="btn btn-danger" href="/students/list">Cancel</a>
     </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
