--- a/src/main/resources/templates/students/add.html
+++ b/src/main/resources/templates/students/add.html
@@ -27,17 +27,17 @@
 <br>
 <div class="container-sm" style="width: 50%">
     <h2 class="navbar-brand">Add Student</h2>
-    <form action="#" method="POST">
+    <form th:action="@{/students/save}" method="POST">
         <div class="mb-3">
             <label for="firstName" class="form-label">First name</label>
-            <input type="text" class="form-control" id="firstName" placeholder="John"/>
+            <input type="text" class="form-control" id="firstName" name="firstName" th:placeholder="John"/>
         </div>
         <div class="mb-3">
             <label for="lastName" class="form-label">Last name</label>
-            <input type="text" class="form-control" id="lastName" placeholder="Doe">
+            <input type="text" class="form-control" id="lastName" name="lastName" th:placeholder="Doe">
         </div>
         <input type="submit" class="btn btn-success" value="Add">
-        <a type="button" class="btn btn-danger" href="/students/list">Cancel</a>
+        <a type="button" class="btn btn-danger" th:href="@{list}">Cancel</a>
     </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
