--- a/src/main/resources/templates/students/list.html
+++ b/src/main/resources/templates/students/list.html
@@ -18,8 +18,9 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <h1>Student Journal</h1>
+
             <div class="d-flex" role="search">
-                <button class="btn btn-primary" type="submit">Logout</button>
+                <a class="btn btn-primary" href="/logout">Logout</a>
             </div>
         </div>
     </nav>
