--- a/src/main/resources/templates/students/edit.html
+++ b/src/main/resources/templates/students/edit.html
@@ -20,7 +20,7 @@
     <div class="container-fluid">
         <h1>Student Journal</h1>
         <div class="d-flex" role="search">
-            <button class="btn btn-primary" type="submit">Logout</button>
+            <a class="btn btn-primary" th:href="@{/logout}">Logout</a>
         </div>
     </div>
 </nav>
