--- a/src/main/resources/templates/students/list.html
+++ b/src/main/resources/templates/students/list.html
@@ -20,7 +20,7 @@
             <h1>Student Journal</h1>
 
             <div class="d-flex" role="search">
-                <a class="btn btn-primary" href="/logout">Logout</a>
+                <a class="btn btn-primary" th:href="@{/logout}">Logout</a>
             </div>
         </div>
     </nav>
